unpackaged/main/default/objects/surveys__c/surveys__c.object-meta.xml
<CustomObject>
    <label>survey</label>
    <nameField>
        <label>﻿Partner ID (NEW)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>