unpackaged/main/default/objects/surveys__c/fields/Active_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Active_Jobs__c</fullName>
    <label>Active Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>