unpackaged/main/default/objects/surveys__c/fields/Additional_Insured__c.field-meta.xml
<CustomField>
    <fullName>Additional_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Insured?</label>
    <type>Checkbox</type>
</CustomField>