unpackaged/main/default/objects/surveys__c/fields/Advance_Card2D__c.field-meta.xml
<CustomField>
    <fullName>Advance_Card2D__c</fullName>
    <label>Advance Card/2D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>