unpackaged/main/default/objects/surveys__c/fields/AlexRachelTom_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>AlexRachelTom_Call_Notes__c</fullName>
    <label>Alex/Rachel/Tom Call Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>