unpackaged/main/default/objects/surveys__c/fields/Alexs_Notes__c.field-meta.xml
<CustomField>
    <fullName>Alexs_Notes__c</fullName>
    <label>Alex's Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>