unpackaged/main/default/objects/surveys__c/fields/Are_you_willing_to_take_on_lower_volume__c.field-meta.xml
<CustomField>
    <fullName>Are_you_willing_to_take_on_lower_volume__c</fullName>
    <label>Are you willing to take on lower volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>