unpackaged/main/default/objects/surveys__c/fields/ATTN__c.field-meta.xml
<CustomField>
    <fullName>ATTN__c</fullName>
    <label>ATTN:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>