unpackaged/main/default/objects/surveys__c/fields/Bar_Feeder__c.field-meta.xml
<CustomField>
    <fullName>Bar_Feeder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bar Feeder</label>
    <type>Checkbox</type>
</CustomField>