unpackaged/main/default/objects/surveys__c/fields/Calibration_Compliancy__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Compliancy__c</fullName>
    <label>Calibration Compliancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>