unpackaged/main/default/objects/surveys__c/fields/Can_View_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can View Jobs?</label>
    <type>Checkbox</type>
</CustomField>