unpackaged/main/default/objects/surveys__c/fields/CMM__c.field-meta.xml
<CustomField>
    <fullName>CMM__c</fullName>
    <label>CMM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>