unpackaged/main/default/objects/surveys__c/fields/CNC_Materials__c.field-meta.xml
<CustomField>
    <fullName>CNC_Materials__c</fullName>
    <label>CNC Materials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>