unpackaged/main/default/objects/surveys__c/fields/Coaching_Reason__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Reason__c</fullName>
    <label>Coaching Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>