unpackaged/main/default/objects/surveys__c/fields/Completed_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Completed_Jobs__c</fullName>
    <label>Completed Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>