unpackaged/main/default/objects/surveys__c/fields/Do_you_have_a_lathe_that_can_machine_par__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_lathe_that_can_machine_par__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have a lathe that can machine par</label>
    <type>Checkbox</type>
</CustomField>