unpackaged/main/default/objects/surveys__c/fields/Do_you_have_any_of_these_3D_Scanners__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_of_these_3D_Scanners__c</fullName>
    <label>Do you have any of these 3D Scanners?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>