unpackaged/main/default/objects/surveys__c/fields/Do_you_have_any_of_these_machines__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_of_these_machines__c</fullName>
    <label>Do you have any of these machines?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>