unpackaged/main/default/objects/surveys__c/fields/Do_you_have_CNC_machines_in_your_shop__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_CNC_machines_in_your_shop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have CNC machines in your shop?</label>
    <type>Checkbox</type>
</CustomField>