unpackaged/main/default/objects/surveys__c/fields/Do_you_have_digital_measuring_capabiliti__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_digital_measuring_capabiliti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have digital measuring capabiliti</label>
    <type>Checkbox</type>
</CustomField>