unpackaged/main/default/objects/surveys__c/fields/Do_you_have_proficiency_with_lower_quant__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_proficiency_with_lower_quant__c</fullName>
    <label>Do you have proficiency with lower quant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>