unpackaged/main/default/objects/surveys__c/fields/Do_you_have_wire_forming_capabilities_S__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_wire_forming_capabilities_S__c</fullName>
    <label>Do you have wire forming capabilities? S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>