unpackaged/main/default/objects/surveys__c/fields/Does_your_shop_complete_any_rapidproto__c.field-meta.xml
<CustomField>
    <fullName>Does_your_shop_complete_any_rapidproto__c</fullName>
    <label>Does your shop complete any "rapid/proto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>