unpackaged/main/default/objects/surveys__c/fields/Does_your_shop_do_box_builds_or_simple_m__c.field-meta.xml
<CustomField>
    <fullName>Does_your_shop_do_box_builds_or_simple_m__c</fullName>
    <label>Does your shop do box builds or simple m</label>
    <length>255</length>
    <type>Text</type>
</CustomField>