unpackaged/main/default/objects/surveys__c/fields/Does_your_shop_have_CNC_tube_bending_or__c.field-meta.xml
<CustomField>
    <fullName>Does_your_shop_have_CNC_tube_bending_or__c</fullName>
    <label>Does your shop have CNC tube bending or</label>
    <length>255</length>
    <type>Text</type>
</CustomField>