unpackaged/main/default/objects/surveys__c/fields/Does_your_shop_have_experience_with_smal__c.field-meta.xml
<CustomField>
    <fullName>Does_your_shop_have_experience_with_smal__c</fullName>
    <label>Does your shop have experience with smal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>