unpackaged/main/default/objects/surveys__c/fields/Does_your_shop_have_the_ability_to_compl__c.field-meta.xml
<CustomField>
    <fullName>Does_your_shop_have_the_ability_to_compl__c</fullName>
    <label>Does your shop have the ability to compl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>