unpackaged/main/default/objects/surveys__c/fields/Does_your_shop_support_sheet_metal_fabri__c.field-meta.xml
<CustomField>
    <fullName>Does_your_shop_support_sheet_metal_fabri__c</fullName>
    <label>Does your shop support sheet metal fabri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>