unpackaged/main/default/objects/surveys__c/fields/Does_your_shop_work_with_Beryllium_Coppe__c.field-meta.xml
<CustomField>
    <fullName>Does_your_shop_work_with_Beryllium_Coppe__c</fullName>
    <label>Does your shop work with Beryllium Coppe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>