unpackaged/main/default/objects/surveys__c/fields/ERP_Link__c.field-meta.xml
<CustomField>
    <fullName>ERP_Link__c</fullName>
    <label>ERP Link</label>
    <type>Url</type>
</CustomField>