unpackaged/main/default/objects/surveys__c/fields/FDM_Materials__c.field-meta.xml
<CustomField>
    <fullName>FDM_Materials__c</fullName>
    <label>FDM Materials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>