unpackaged/main/default/objects/surveys__c/fields/FDM_Printers_QuantityMakeModel__c.field-meta.xml
<CustomField>
    <fullName>FDM_Printers_QuantityMakeModel__c</fullName>
    <label>FDM Printers (Quantity/Make/Model #)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>