unpackaged/main/default/objects/surveys__c/fields/Form_SendCollection_2__c.field-meta.xml
<CustomField>
    <fullName>Form_SendCollection_2__c</fullName>
    <label>Form Send/Collection 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>