unpackaged/main/default/objects/surveys__c/fields/GMP_Link__c.field-meta.xml
<CustomField>
    <fullName>GMP_Link__c</fullName>
    <label>GMP Link</label>
    <type>Url</type>
</CustomField>