unpackaged/main/default/objects/surveys__c/fields/Grinding__c.field-meta.xml
<CustomField>
    <fullName>Grinding__c</fullName>
    <label>Grinding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>