unpackaged/main/default/objects/surveys__c/fields/Gun_Drilling__c.field-meta.xml
<CustomField>
    <fullName>Gun_Drilling__c</fullName>
    <label>Gun Drilling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>