unpackaged/main/default/objects/surveys__c/fields/Have_a_mill_over_50_x_30__c.field-meta.xml
<CustomField>
    <fullName>Have_a_mill_over_50_x_30__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have a mill over 50" x 30"</label>
    <type>Checkbox</type>
</CustomField>