unpackaged/main/default/objects/surveys__c/fields/How_many_combined_years_of_experience_do__c.field-meta.xml
<CustomField>
    <fullName>How_many_combined_years_of_experience_do__c</fullName>
    <label>How many combined years of experience do</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>