unpackaged/main/default/objects/surveys__c/fields/How_many_of_your_employees_are_primarily__c.field-meta.xml
<CustomField>
    <fullName>How_many_of_your_employees_are_primarily__c</fullName>
    <label>How many of your employees are primarily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>