unpackaged/main/default/objects/surveys__c/fields/How_many_RFQs_would_you_like_to_quote_p__c.field-meta.xml
<CustomField>
    <fullName>How_many_RFQs_would_you_like_to_quote_p__c</fullName>
    <label>How many RFQ's would you like to quote p</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>