unpackaged/main/default/objects/surveys__c/fields/Hydraulic_Brake__c.field-meta.xml
<CustomField>
    <fullName>Hydraulic_Brake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hydraulic Brake?</label>
    <type>Checkbox</type>
</CustomField>