unpackaged/main/default/objects/surveys__c/fields/If_Yes__c.field-meta.xml
<CustomField>
    <fullName>If_Yes__c</fullName>
    <label>If Yes,</label>
    <length>255</length>
    <type>Text</type>
</CustomField>