unpackaged/main/default/objects/surveys__c/fields/Imported_table__c.field-meta.xml
<CustomField>
    <fullName>Imported_table__c</fullName>
    <label>Imported table</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>