unpackaged/main/default/objects/surveys__c/fields/Ink_Stamping__c.field-meta.xml
<CustomField>
    <fullName>Ink_Stamping__c</fullName>
    <label>Ink Stamping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>