unpackaged/main/default/objects/surveys__c/fields/Interested_in_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Marketplace__c</fullName>
    <label>Interested in Marketplace?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>