unpackaged/main/default/objects/surveys__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>