unpackaged/main/default/objects/surveys__c/fields/Internal_Warnings_Requests__c.field-meta.xml
<CustomField>
    <fullName>Internal_Warnings_Requests__c</fullName>
    <label>Internal Warnings &amp; Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>