unpackaged/main/default/objects/surveys__c/fields/Key_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Key_Accounts__c</fullName>
    <label>Key Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>