unpackaged/main/default/objects/surveys__c/fields/Knurling__c.field-meta.xml
<CustomField>
    <fullName>Knurling__c</fullName>
    <label>Knurling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>