unpackaged/main/default/objects/surveys__c/fields/Kydex_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Kydex_Capabilities__c</fullName>
    <label>Kydex Capabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>