unpackaged/main/default/objects/surveys__c/fields/Laser_Cutter__c.field-meta.xml
<CustomField>
    <fullName>Laser_Cutter__c</fullName>
    <label>Laser Cutter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>