unpackaged/main/default/objects/surveys__c/fields/Laser_Marking__c.field-meta.xml
<CustomField>
    <fullName>Laser_Marking__c</fullName>
    <label>Laser Marking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>