unpackaged/main/default/objects/surveys__c/fields/Last_Escalation_Record_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Escalation_Record_Update__c</fullName>
    <label>Last Escalation Record Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>