unpackaged/main/default/objects/surveys__c/fields/Last_Step_Taken__c.field-meta.xml
<CustomField>
    <fullName>Last_Step_Taken__c</fullName>
    <label>Last Step Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>