unpackaged/main/default/objects/surveys__c/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <label>Last Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>