unpackaged/main/default/objects/surveys__c/fields/Late_Job_Explanation_Link__c.field-meta.xml
<CustomField>
    <fullName>Late_Job_Explanation_Link__c</fullName>
    <label>Late Job Explanation Link</label>
    <type>Url</type>
</CustomField>