unpackaged/main/default/objects/surveys__c/fields/Marketplace_Form_Responses__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Form_Responses__c</fullName>
    <label>Marketplace Form Responses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>