unpackaged/main/default/objects/surveys__c/fields/Materials_2__c.field-meta.xml
<CustomField>
    <fullName>Materials_2__c</fullName>
    <label>Materials 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>