unpackaged/main/default/objects/surveys__c/fields/Micro_Machining__c.field-meta.xml
<CustomField>
    <fullName>Micro_Machining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Micro Machining</label>
    <type>Checkbox</type>
</CustomField>