unpackaged/main/default/objects/surveys__c/fields/Most_Recent_Coaching_Case__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Coaching_Case__c</fullName>
    <label>Most Recent Coaching Case</label>
    <type>Date</type>
</CustomField>