unpackaged/main/default/objects/surveys__c/fields/Most_Recently_Opened_Case__c.field-meta.xml
<CustomField>
    <fullName>Most_Recently_Opened_Case__c</fullName>
    <label>Most Recently Opened Case</label>
    <type>Date</type>
</CustomField>