unpackaged/main/default/objects/surveys__c/fields/Next_Steps_Time_Record__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Time_Record__c</fullName>
    <label>Next Steps, Time Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>