unpackaged/main/default/objects/surveys__c/fields/of_Escalations__c.field-meta.xml
<CustomField>
    <fullName>of_Escalations__c</fullName>
    <label># of Escalations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>