unpackaged/main/default/objects/surveys__c/fields/Onboarding_ZD_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_ZD_Ticket__c</fullName>
    <label>Onboarding ZD Ticket</label>
    <type>Url</type>
</CustomField>