unpackaged/main/default/objects/surveys__c/fields/Open_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Open_Action_Items__c</fullName>
    <label>Open Action Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>