unpackaged/main/default/objects/surveys__c/fields/Open_Job_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Open_Job_Revenue__c</fullName>
    <label>Open Job Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>