unpackaged/main/default/objects/surveys__c/fields/Open_Mission_Control_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Mission_Control_Cases__c</fullName>
    <label>Open Mission Control Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>