unpackaged/main/default/objects/surveys__c/fields/Other_types_of_3D_Scanners__c.field-meta.xml
<CustomField>
    <fullName>Other_types_of_3D_Scanners__c</fullName>
    <label>Other types of 3D Scanners:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>