unpackaged/main/default/objects/surveys__c/fields/Outside_of_Xometry_what_type_of_work_do__c.field-meta.xml
<CustomField>
    <fullName>Outside_of_Xometry_what_type_of_work_do__c</fullName>
    <label>Outside of Xometry, what type of work do</label>
    <length>255</length>
    <type>Text</type>
</CustomField>