unpackaged/main/default/objects/surveys__c/fields/Partner_Survey_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Survey_2__c</fullName>
    <label>Partner Survey 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>