unpackaged/main/default/objects/surveys__c/fields/Partner_Survey__c.field-meta.xml
<CustomField>
    <fullName>Partner_Survey__c</fullName>
    <label>Partner Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>