unpackaged/main/default/objects/surveys__c/fields/PDU_Test_Yes__c.field-meta.xml
<CustomField>
    <fullName>PDU_Test_Yes__c</fullName>
    <label>PDU Test Yes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>