unpackaged/main/default/objects/surveys__c/fields/PIP_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PIP_Expiration_Date__c</fullName>
    <label>PIP Expiration Date</label>
    <type>Date</type>
</CustomField>