unpackaged/main/default/objects/surveys__c/fields/PIPs__c.field-meta.xml
<CustomField>
    <fullName>PIPs__c</fullName>
    <label>PIPs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>