unpackaged/main/default/objects/surveys__c/fields/Plastic_Extrusion__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Extrusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plastic Extrusion</label>
    <type>Checkbox</type>
</CustomField>