unpackaged/main/default/objects/surveys__c/fields/Please_list_other_capabilities__c.field-meta.xml
<CustomField>
    <fullName>Please_list_other_capabilities__c</fullName>
    <label>Please list other capabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>