unpackaged/main/default/objects/surveys__c/fields/Preferred_Materials__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Materials__c</fullName>
    <label>Preferred Materials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>