unpackaged/main/default/objects/surveys__c/fields/Primarily_Additive__c.field-meta.xml
<CustomField>
    <fullName>Primarily_Additive__c</fullName>
    <label>Primarily Additive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>