unpackaged/main/default/objects/surveys__c/fields/QMS_Certified__c.field-meta.xml
<CustomField>
    <fullName>QMS_Certified__c</fullName>
    <label>QMS Certified?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>