unpackaged/main/default/objects/surveys__c/fields/QMS_Compliancy__c.field-meta.xml
<CustomField>
    <fullName>QMS_Compliancy__c</fullName>
    <label>QMS Compliancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>