unpackaged/main/default/objects/surveys__c/fields/QMS_Document__c.field-meta.xml
<CustomField>
    <fullName>QMS_Document__c</fullName>
    <label>QMS Document</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>