unpackaged/main/default/objects/surveys__c/fields/QMS_Document_Exists__c.field-meta.xml
<CustomField>
    <fullName>QMS_Document_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QMS Document Exists?</label>
    <type>Checkbox</type>
</CustomField>