unpackaged/main/default/objects/surveys__c/fields/QMS_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>QMS_Time_Stamp__c</fullName>
    <label>QMS Time Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>