unpackaged/main/default/objects/surveys__c/fields/Reason_for_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Opt_Out__c</fullName>
    <label>Reason for Opt-Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>