unpackaged/main/default/objects/surveys__c/fields/RFQ_Email__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Email__c</fullName>
    <label>RFQ Email</label>
    <type>Email</type>
</CustomField>