unpackaged/main/default/objects/surveys__c/fields/RFQ_Only__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Only__c</fullName>
    <label>RFQ Only?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>