unpackaged/main/default/objects/surveys__c/fields/Secondary_RFQ_Technology__c.field-meta.xml
<CustomField>
    <fullName>Secondary_RFQ_Technology__c</fullName>
    <label>Secondary RFQ Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>