unpackaged/main/default/objects/surveys__c/fields/Set_up_for_production_runs__c.field-meta.xml
<CustomField>
    <fullName>Set_up_for_production_runs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set up for production runs?</label>
    <type>Checkbox</type>
</CustomField>