unpackaged/main/default/objects/surveys__c/fields/Sheet_Metal_Capable__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Metal_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sheet Metal Capable</label>
    <type>Checkbox</type>
</CustomField>