unpackaged/main/default/objects/surveys__c/fields/Sheet_Metal_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Metal_Process_Type__c</fullName>
    <label>Sheet Metal Process Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>