unpackaged/main/default/objects/surveys__c/fields/shop_info_business_designation__c.field-meta.xml
<CustomField>
    <fullName>shop_info_business_designation__c</fullName>
    <label>shop_info_business_designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>