unpackaged/main/default/objects/surveys__c/fields/shop_info_can_make_print_from_cad__c.field-meta.xml
<CustomField>
    <fullName>shop_info_can_make_print_from_cad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>shop_info_can_make_print_from_cad</label>
    <type>Checkbox</type>
</CustomField>