unpackaged/main/default/objects/surveys__c/fields/Sign_Up__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up__c</fullName>
    <label>Sign-Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>