unpackaged/main/default/objects/surveys__c/fields/Taken_Work__c.field-meta.xml
<CustomField>
    <fullName>Taken_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taken Work?</label>
    <type>Checkbox</type>
</CustomField>