unpackaged/main/default/objects/surveys__c/fields/Titanium_Welding__c.field-meta.xml
<CustomField>
    <fullName>Titanium_Welding__c</fullName>
    <label>Titanium Welding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>