unpackaged/main/default/objects/surveys__c/fields/Total_of_VQC_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_of_VQC_Records__c</fullName>
    <label>Total # of VQC Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>