unpackaged/main/default/objects/surveys__c/fields/Total_of_working_employees__c.field-meta.xml
<CustomField>
    <fullName>Total_of_working_employees__c</fullName>
    <label>Total # of "working" employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>