unpackaged/main/default/objects/surveys__c/fields/Typically_RFQ_with__c.field-meta.xml
<CustomField>
    <fullName>Typically_RFQ_with__c</fullName>
    <label>Typically RFQ with?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>