unpackaged/main/default/objects/surveys__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <label>Updated?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>