unpackaged/main/default/objects/surveys__c/fields/Updated_to_new_Data_Push_Time__c.field-meta.xml
<CustomField>
    <fullName>Updated_to_new_Data_Push_Time__c</fullName>
    <label>Updated to new Data Push Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>