unpackaged/main/default/objects/surveys__c/fields/Verified_Country__c.field-meta.xml
<CustomField>
    <fullName>Verified_Country__c</fullName>
    <label>Verified Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>