unpackaged/main/default/objects/surveys__c/fields/VQC_Flag__c.field-meta.xml
<CustomField>
    <fullName>VQC_Flag__c</fullName>
    <label>VQC Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>