unpackaged/main/default/objects/surveys__c/fields/Want_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Want_to_Send__c</fullName>
    <label>Want to Send?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>