unpackaged/main/default/objects/surveys__c/fields/Waterjet__c.field-meta.xml
<CustomField>
    <fullName>Waterjet__c</fullName>
    <label>Waterjet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>