unpackaged/main/default/objects/surveys__c/fields/Webinar_Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Attendance_Date__c</fullName>
    <label>Webinar Attendance Date</label>
    <type>Date</type>
</CustomField>