unpackaged/main/default/objects/surveys__c/fields/Welding_AWS_Certified__c.field-meta.xml
<CustomField>
    <fullName>Welding_AWS_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welding - AWS Certified?</label>
    <type>Checkbox</type>
</CustomField>