unpackaged/main/default/objects/surveys__c/fields/What_are_your_shops_capabilities__c.field-meta.xml
<CustomField>
    <fullName>What_are_your_shops_capabilities__c</fullName>
    <label>What are your shop's capabilities?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>