unpackaged/main/default/objects/surveys__c/fields/What_CAM_software_do_you_use__c.field-meta.xml
<CustomField>
    <fullName>What_CAM_software_do_you_use__c</fullName>
    <label>What CAM software do you use?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>