unpackaged/main/default/objects/surveys__c/fields/What_equipment_do_you_have_in_your_shop__c.field-meta.xml
<CustomField>
    <fullName>What_equipment_do_you_have_in_your_shop__c</fullName>
    <label>What equipment do you have in your shop?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>