unpackaged/main/default/objects/surveys__c/fields/What_is_the_minimum_material_thickness_y__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_minimum_material_thickness_y__c</fullName>
    <label>What is the minimum material thickness y</label>
    <length>255</length>
    <type>Text</type>
</CustomField>