unpackaged/main/default/objects/surveys__c/fields/What_is_your_current_win_rate__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_current_win_rate__c</fullName>
    <label>What is your current win rate?</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>