unpackaged/main/default/objects/surveys__c/fields/What_is_your_shop_type__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_shop_type__c</fullName>
    <label>What is your shop type?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>