unpackaged/main/default/objects/surveys__c/fields/What_materials_do_you_regularly_keep_in__c.field-meta.xml
<CustomField>
    <fullName>What_materials_do_you_regularly_keep_in__c</fullName>
    <label>What materials do you regularly keep in-</label>
    <length>255</length>
    <type>Text</type>
</CustomField>