unpackaged/main/default/objects/surveys__c/fields/WIling_to_do_Kanban_shipment_schedules__c.field-meta.xml
<CustomField>
    <fullName>WIling_to_do_Kanban_shipment_schedules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WIling to do Kanban shipment schedules?</label>
    <type>Checkbox</type>
</CustomField>