unpackaged/main/default/objects/surveys__c/fields/Willing_to_manufacture_from_just_a_2D_Pr__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_manufacture_from_just_a_2D_Pr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to manufacture from just a 2D Pr</label>
    <type>Checkbox</type>
</CustomField>