unpackaged/main/default/objects/surveys__c/fields/Willing_to_quote_from_a_2D_print__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_quote_from_a_2D_print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to quote from a 2D print?</label>
    <type>Checkbox</type>
</CustomField>