unpackaged/main/default/objects/surveys__c/fields/Willing_to_take_a_job_with_any_of_these__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_take_a_job_with_any_of_these__c</fullName>
    <label>Willing to take a job with any of these</label>
    <length>255</length>
    <type>Text</type>
</CustomField>