unpackaged/main/default/objects/surveys__c/fields/X10_Calibration__c.field-meta.xml
<CustomField>
    <fullName>X10_Calibration__c</fullName>
    <label>10% Calibration?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>