unpackaged/main/default/objects/surveys__c/fields/X10_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>X10_Corrective_Action__c</fullName>
    <label>10% Corrective Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>