unpackaged/main/default/objects/surveys__c/fields/X10_Date__c.field-meta.xml
<CustomField>
    <fullName>X10_Date__c</fullName>
    <label>10% Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>