unpackaged/main/default/objects/surveys__c/fields/X10_Document_Control__c.field-meta.xml
<CustomField>
    <fullName>X10_Document_Control__c</fullName>
    <label>10% Document Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>